--- a/BallanceVirtoolsHelper.vcxproj.filters
+++ b/BallanceVirtoolsHelper.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="func_namespace\misc_SpecialNMO.h">
       <Filter>头文件\func_namespace</Filter>
     </ClInclude>
+    <ClInclude Include="config_manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -55,6 +58,9 @@
     </ClCompile>
     <ClCompile Include="func_namespace\misc_SpecialNMO.cpp">
       <Filter>源文件\func_namespace</Filter>
+    </ClCompile>
+    <ClCompile Include="config_manager.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
