finish bm export window

--- a/BallanceVirtoolsHelper.vcxproj
+++ b/BallanceVirtoolsHelper.vcxproj
@@ -150,9 +150,9 @@
     <ClInclude Include="func_namespace\mapping_Group.h" />
     <ClInclude Include="func_namespace\misc_SpecialNMO.h" />
     <ClInclude Include="func_namespace\script_CKDataArray.h" />
+    <ClInclude Include="func_window\mapping_BMExport.h" />
     <ClInclude Include="func_window\misc_config.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="vt_menu.h" />
   </ItemGroup>
@@ -163,6 +163,7 @@
     <ClCompile Include="func_namespace\mapping_Group.cpp" />
     <ClCompile Include="func_namespace\misc_SpecialNMO.cpp" />
     <ClCompile Include="func_namespace\script_CKDataArray.cpp" />
+    <ClCompile Include="func_window\mapping_BMExport.cpp" />
     <ClCompile Include="func_window\misc_config.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="vt_menu.cpp" />
