--- a/BallanceVirtoolsHelper.vcxproj.filters
+++ b/BallanceVirtoolsHelper.vcxproj.filters
@@ -51,14 +51,14 @@
     <ClInclude Include="func_namespace\mapping_BM.h">
       <Filter>头文件\func_namespace</Filter>
     </ClInclude>
-    <ClInclude Include="resource1.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="func_window\misc_config.h">
       <Filter>头文件\func_window</Filter>
     </ClInclude>
     <ClInclude Include="func_namespace\mapping_Group.h">
       <Filter>头文件\func_namespace</Filter>
+    </ClInclude>
+    <ClInclude Include="func_window\mapping_BMExport.h">
+      <Filter>头文件\func_window</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +88,9 @@
     </ClCompile>
     <ClCompile Include="func_namespace\mapping_Group.cpp">
       <Filter>源文件\func_namespace</Filter>
+    </ClCompile>
+    <ClCompile Include="func_window\mapping_BMExport.cpp">
+      <Filter>源文件\func_window</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
