--- a/BallanceVirtoolsHelper.vcxproj.filters
+++ b/BallanceVirtoolsHelper.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="func_namespace\mapping_Shadow.h">
       <Filter>头文件\func_namespace</Filter>
     </ClInclude>
+    <ClInclude Include="func_window\window_ConvertEncoding.h">
+      <Filter>头文件\func_window</Filter>
+    </ClInclude>
+    <ClInclude Include="func_namespace\misc_ConvertEncoding.h">
+      <Filter>头文件\func_namespace</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -96,6 +102,12 @@
       <Filter>源文件\func_window</Filter>
     </ClCompile>
     <ClCompile Include="func_namespace\mapping_Shadow.cpp">
+      <Filter>源文件\func_namespace</Filter>
+    </ClCompile>
+    <ClCompile Include="func_window\window_ConvertEncoding.cpp">
+      <Filter>源文件\func_window</Filter>
+    </ClCompile>
+    <ClCompile Include="func_namespace\misc_ConvertEncoding.cpp">
       <Filter>源文件\func_namespace</Filter>
     </ClCompile>
   </ItemGroup>
